<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.Profile">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen100"
        android:layout_height="@dimen/dimen100"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/home_nama"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="@dimen/dimen8"
        android:layout_marginTop="@dimen/dimen30"
        android:text="@string/home_deskripsi_isi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btnInstagram"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen30"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/ic_menu_home"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen30"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/ic_menu_home"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/btnWhasapp"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen30"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/ic_menu_home"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </LinearLayout>

    <TextView
        android:id="@+id/findMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_nama"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen15"
        android:gravity="center"
        android:text="About"
        app:layout_constraintBottom_toBottomOf="    parent" />


</androidx.constraintlayout.widget.ConstraintLayout>-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.Profile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/profile"
            app:civ_border_color="#fff"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardOne"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/findMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/home_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/home_nama" />

            <TextView
                android:id="@+id/home_tgllahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_nama"
                android:layout_marginTop="4dp"
                android:text="@string/home_tgllahir" />

            <TextView
                android:id="@+id/home_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_tgllahir"
                android:layout_marginEnd="16dp"
                android:text="@string/home_deskripsi" />

            <TextView
                android:id="@+id/home_deskripsi_isi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_deskripsi"
                android:text="@string/home_deskripsi_isi"
                android:textAlignment="textStart" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btnInstagram"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen30"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/ic_instagram"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen30"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/ic_facebook"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/btnWhasapp"
            android:layout_width="@dimen/dimen30"
            android:layout_height="@dimen/dimen30"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/ic_whatsapp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </LinearLayout>

    <Button
        android:id="@+id/findMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_findme"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen15"
        android:gravity="center"
        android:text="@string/profile_aboutapps"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>